--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,9 @@
 {
     "version": 2,
     "functions": {
-      "api/*.js": {
+      "api/send-booking.js": {
+        "memory": 128,
         "maxDuration": 10
       }
-    },
-    "rewrites": [
-      {
-        "source": "/api/send-booking",
-        "destination": "/api/server"
-      }
-    ]
+    }
   }
