--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "studio-neha-backend",
   "version": "1.0.0",
   "dependencies": {
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "express": "^4.19.2",
+    "cors": "^2.8.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
